--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "@nuxt/devtools": "latest",
     "@nuxtjs/tailwindcss": "^6.7.2",
     "@types/node": "^18",
-    "nuxt": "^3.5.2"
+    "nuxt": "^3.5.2",
+    "nuxt-icon": "^0.4.1"
   },
   "dependencies": {
-    "nuxt-icons": "^3.2.1"
+    "sass": "^1.63.3"
   }
 }
